# Realsense_cpp

./: .gitignore  CMakeLists.txt  README.md  build_eigen.sh  build_opencv.sh  build_pcl.sh  build_realsense.sh  build_vtk.sh  install_cmake.sh  main.cpp  reset_usb.sh  usb_set
include/: CameraRS.h  RealSenseCameraInterface.h  pc_LUT.h
src/: CameraRS.cpp  RealSenseCameraInterface.cpp
